2005-11-27 Niklas Knutsson  <nq@altern.org>

	* Unknown variable with sign non-negative or non-positive represents real number
	* Update assumption type after setting sign and vice versa

2005-11-26 Niklas Knutsson  <nq@altern.org>

	* Be more restrictive with unknown variables/symbols with unknown type (might be unit or vector)

2005-11-25 Niklas Knutsson  <nq@altern.org>

	* Update qalc with new factorization and some more
	* Option for qalc to read commands from a file first
	* Fix unit comparisons
	* Fix handling of units with function in relation saved in approximate variable

2005-11-24 Niklas Knutsson  <nq@altern.org>

	* Sort out some power transformations

2005-11-23 Niklas Knutsson  <nq@altern.org>

	* More fixes (I'm not very good at keeping track of them)

2005-11-22 Niklas Knutsson  <nq@altern.org>

	* Preserve factorization print option (for (3/4*(x+1))/(y+1))

2005-11-21 Niklas Knutsson  <nq@altern.org>

	* Lots of evaluation and factorization fixes
	* Pass parent to some functions so the reference can be replaced for the whole child
	* New MathStructure sorting algorithm using the fact that the structure usually already is well sorted,
	  reducing the time to factorize (x+y)^50 to a third

2005-11-19 Niklas Knutsson  <nq@altern.org>

	* Add rational polynomial parameter to arguments
	* Add rational number parameter to number arguments
	* Add polynomial functions -- coeff(), lcoeff(), pcontent(), degree(), etc.
	* Fix lcoefficient (confused by l in ldegree mening low and l in coefficient leading)
	* A more efficient differentiate function for sqrfree

2005-11-18 Niklas Knutsson  <nq@altern.org>

	* Fixes
	* Determinant from GiNaC
	* Only use the new inverse function for numeric matrices

2005-11-17 Niklas Knutsson  <nq@altern.org>

	* "borrow" sqrfree factorization and related functions from GiNaC
	* Make evaluation more efficient (avoid recalculations)

2005-11-10 Niklas Knutsson  <nq@altern.org>

	* MathStructure gcd() and lcm()